setting: 최상위 레이아웃 스타일 구성
- 프로젝트 전역 스타일링
- 메타데이터 설정, 레이아웃 컴포넌트 스타일링

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -182,9 +182,9 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: var(--font-noto-sans-kr), Arial, Helvetica, sans-serif;
+  background-color: var(--bg-base);
+  color: var(--content-neutral-base);
 }
 
 @layer utilities {
