feat: 검색창 UI - 검색창을 구성하기 위한 컨트롤러, 뷰

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -180,6 +180,11 @@
     --border-static-blackalpha-strong: #rgba(0, 0, 0, 0.3);
   }
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   font-family: var(--font-noto-sans-kr), Arial, Helvetica, sans-serif;
