--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -80,9 +80,14 @@
   --surface-neutral-base: var(--neutral-2);
   --surface-neutral-strong: var(--neutral-5);
   --surface-neutral-inverse: var(--neutral-95);
-  --surface-brand-weak: var(--brand-10);
+
+  /* --surface-brand-weak: var(--brand-10);
   --surface-brand-base: var(--brand-40);
-  --surface-brand-strong: var(--brand-45);
+  --surface-brand-strong: var(--brand-45); */
+  --surface-brand-weak: var(--violet-10);
+  --surface-brand-base: var(--violet-40);
+  --surface-brand-strong: var(--violet-50);
+
   --surface-red-base: var(--red-30);
   --surface-red-strong: var(--red-50);
   --surface-violet-base: var(--violet-50);
@@ -99,9 +104,14 @@
   --content-neutral-weak: var(--neutral-30);
   --content-neutral-base: var(--neutral-40);
   --content-neutral-strong: var(--neutral-50);
-  --content-brand-weak: var(--brand-40);
+
+  /* --content-brand-weak: var(--brand-40);
   --content-brand-base: var(--brand-45);
-  --content-brand-strong: var(--brand-50);
+  --content-brand-strong: var(--brand-50); */
+  --content-brand-weak: var(--violet-30);
+  --content-brand-base: var(--violet-40);
+  --content-brand-strong: var(--violet-50);
+
   --content-red-base: var(--red-30);
   --content-red-strong: var(--red-50);
   --content-static-white: var(--neutral-0);
@@ -112,9 +122,14 @@
   --border-neutral-weak: var(--neutral-7);
   --border-neutral-base: var(--neutral-10);
   --border-neutral-strong: var(--coolgray-30);
-  --border-brand-weak: var(--brand-30);
+
+  /* --border-brand-weak: var(--brand-30);
   --border-brand-base: var(--brand-45);
-  --border-brand-strong: var(--brand-50);
+  --border-brand-strong: var(--brand-50); */
+  --border-brand-weak: var(--violet-30);
+  --border-brand-base: var(--violet-40);
+  --border-brand-strong: var(--violet-50);
+
   --border-red-base: var(--red-30);
   --border-red-strong: var(--red-50);
   --border-static-white: var(--neutral-0);
@@ -136,9 +151,14 @@
     --surface-neutral-base: var(--neutral-50);
     --surface-neutral-strong: var(--neutral-40);
     --surface-neutral-inverse: var(--neutral-0);
-    --surface-brand-weak: var(--brand-80);
+
+    /* --surface-brand-weak: var(--brand-80);
     --surface-brand-base: var(--brand-60);
-    --surface-brand-strong: var(--brand-55);
+    --surface-brand-strong: var(--brand-55); */
+    --surface-brand-weak: var(--violet-80);
+    --surface-brand-base: var(--violet-60);
+    --surface-brand-strong: var(--violet-50);
+
     --surface-red-base: var(--red-30);
     --surface-red-strong: var(--red-50);
     --surface-violet-base: var(--violet-50);
@@ -154,9 +174,14 @@
     --content-neutral-weak: var(--neutral-50);
     --content-neutral-base: var(--neutral-30);
     --content-neutral-strong: var(--neutral-20);
-    --content-brand-weak: var(--brand-70);
+
+    /* --content-brand-weak: var(--brand-70);
     --content-brand-base: var(--brand-55);
-    --content-brand-strong: var(--brand-50);
+    --content-brand-strong: var(--brand-50); */
+    --content-brand-weak: var(--violet-70);
+    --content-brand-base: var(--violet-60);
+    --content-brand-strong: var(--violet-50);
+
     --content-red-base: var(--red-30);
     --content-red-strong: var(--red-50);
     --content-static-white: var(--neutral-0);
@@ -167,9 +192,14 @@
     --border-neutral-weak: var(--neutral-50);
     --border-neutral-base: var(--neutral-40);
     --border-neutral-strong: var(--coolgray-50);
-    --border-brand-weak: var(--brand-70);
+
+    /* --border-brand-weak: var(--brand-70);
     --border-brand-base: var(--brand-55);
-    --border-brand-strong: var(--brand-50);
+    --border-brand-strong: var(--brand-50); */
+    --border-brand-weak: var(--violet-70);
+    --border-brand-base: var(--violet-60);
+    --border-brand-strong: var(--violet-50);
+
     --border-red-base: var(--red-30);
     --border-red-strong: var(--red-50);
     --border-static-white: var(--neutral-0);
