feat: StudioDropdown - 스튜디오 내 방송 페이지에서 사용할 드롭다운 컴포넌트를 만들었다. #229

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -138,6 +138,8 @@
   --border-static-black: var(--neutral-100);
   --border-static-blackalpha-base: #rgba(0, 0, 0, 0.15);
   --border-static-blackalpha-strong: #rgba(0, 0, 0, 0.3);
+
+  --dropdown-shadow: 0 0 2px rgba(0, 0, 0, 0.05), 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 /* @media (prefers-color-scheme: dark) { */
@@ -209,6 +211,8 @@
   --border-static-black: var(--neutral-100);
   --border-static-blackalpha-base: #rgba(0, 0, 0, 0.15);
   --border-static-blackalpha-strong: #rgba(0, 0, 0, 0.3);
+
+  --dropdown-shadow: 0 0 2px rgba(0, 0, 0, 0.05), 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 /* } */
 * {
